Fix text align

--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -100,6 +100,14 @@
 
 }
 
+@media (min-width:986px) {
+
+    .main__info-p {
+
+        text-align: left;
+    }
+}
+
 
 .main__info-a {
     background-color: black;
